noinst_LTLIBRARIES = libde265_encoder_algo.la

libde265_encoder_algo_la_CXXFLAGS = -I../..
libde265_encoder_algo_la_SOURCES = \
  algo.h algo.cc \
  coding-options.h coding-options.cc \
  ctb-qscale.h ctb-qscale.cc \
  cb-split.h cb-split.cc \
  cb-predmode.h cb-predmode.cc \
  cb-intrapartmode.h cb-intrapartmode.cc \
  cb-interpartmode.h cb-interpartmode.cc \
  cb-skip-or-inter.h cb-skip-or-inter.cc \
  cb-mergeindex.h cb-mergeindex.cc \
  tb-split.h tb-split.cc \
  tb-intrapredmode.h tb-intrapredmode.cc
